<resources>
    <string name="app_name">BookBank</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="sing_in">Sing In</string>
    <string name="online_library_service">Online Library Service</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="sing_up">Sing Up</string>
    <string name="or">or</string>
    <string name="launch_sing_up">com.example.bookbank.RegisterActivity</string>
    <string name="launch_forgot_pwd">com.example.bookbank.ForgotPwdActivity</string>
    <string name="confirm_pwd">Conferma password</string>
    <string name="launch_sing_in">com.example.bookbank.LoginActivity</string>
    <string name="recover_account">Recupera l\'account</string>
    <string name="search">Cerca</string>
    <string name="verify_the_account">Hai ricevuto nell\'email un codice di verifica per resettare la password.</string>
    <string name="code">Codice</string>
    <string name="verify">Verifica</string>
    <string name="return_code">Non hai ricevuto il codice?</string>
    <string name="launch_reset_pwd">com.example.bookbank.ResetPwdActivity</string>
    <string name="reset_pwd">Reset password</string>
    <string name="new_password">Nuova password</string>
    <string name="description_ic_account">Account</string>
    <string name="u10">U10</string>
    <string name="nav_home">Catalogo</string>
    <string name="nav_favorite">Preferiti</string>
    <string name="nav_settings">Impostazioni</string>
    <string name="nav_exit_to_app">Esci</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="description_ic_close">Close</string>
    <string name="launch_nav">com.example.bookbank.NavCompatActivity</string>
    <string name="book">Nome Libro</string>
    <string name="author">Autore</string>
    <string name="price">Prezzo</string>
    <string name="description_ic_favorite">Favorite</string>
    <string name="tags">Tags</string>
    <string name="no_book">Nessun libro</string>
    <string name="launch_book">com.example.bookbank.BookActivity</string>
    <string name="search_books">Cerca Libri</string>
    <string name="description_book">Photo of the book</string>
    <string name="reviews">Recensioni</string>
    <string name="change_pwd">Cambia password</string>
    <string name="launch_change_pwd">com.example.bookbank.ChangePwdActivity</string>
    <string name="current_password">Password attuale</string>
</resources>