<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_weight="40">

        <TextView
            android:id="@+id/tv_book"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/book" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/author" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/price" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="60">

        <ImageButton
            android:id="@+id/ibtt_favorite"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_favorite"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_ic_favorite"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_tags"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/tags" />

    </LinearLayout>
</LinearLayout>