<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal"
        android:text="@string/online_library_service"
        android:fontFamily="sans-serif-light"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sing_in"
            android:fontFamily="sans-serif-medium"
            android:textSize="45sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            app:boxStrokeColor="@color/light_red"
            app:hintTextColor="@color/light_red"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:lineSpacingExtra="0dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            app:boxStrokeColor="@color/light_red"
            app:hintTextColor="@color/light_red"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd"
                android:lineSpacingExtra="0dp"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/txt_forgot_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:layout_marginTop="-78dp"
                android:text="@string/forgot_pwd"
                android:textColor="@android:color/holo_blue_light"
                tools:ignore="RtlHardcoded" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btt_sing_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_corner"
            android:text="@string/sing_in"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:fontFamily="sans-serif-light" />

        <Button
            android:id="@+id/btt_sing_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:text="@string/sing_up"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <!--TODO twitter and facebook-->

</RelativeLayout>