<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:padding="16dp"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/ibtt_close"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/description_ic_close" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="45dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_account"
            android:contentDescription="@string/description_ic_account"
            app:tint="@color/black" />

        <View
            android:layout_width="3dp"
            android:layout_height="25.8dp"
            android:layout_marginStart="-3dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/round_line" />

        <View
            android:layout_width="3dp"
            android:layout_height="25.8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_line" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/u10"
        android:textAlignment="center"
        android:layout_marginTop="15dp" />

</LinearLayout>